--- a/songs/Guitar/back_home_in_derry.tex
+++ b/songs/Guitar/back_home_in_derry.tex
@@ -1,5 +1,5 @@
 \beginsong{Back Home in Derry}[
-	by={Irish\ Traditional}]
+	by={Traditional}]
 
 \beginverse
 In \[Am]eighteen-o-three we \[Em]sailed out to sea
