--- a/songs/Guitar/last_night_of_the_kings.tex
+++ b/songs/Guitar/last_night_of_the_kings.tex
@@ -1,8 +1,11 @@
-\beginsong{Last Night of the Kings}[]
+\beginsong{Last Night of the Kings}[
+	by={Van Canto}
+]
+
 \beginverse*
-Raban\[Em]da  Raban\[Bm]dabaya \[G]Aaa\[D]ah
-Raban\[G]da  Raban\[C]dabaya \[D]Rabadanba\[Em]yah
-\endverse
+\lrep Raban\[Em]da  Raban\[Bm]dabaya \[G]Aaa\[D]ah
+Raban\[G]da  Raban\[C]dabaya \[D]Rabadanba\[Em]yah \rrep \rep{2}
+\endverse 
 
 \beginverse\memorize
 The \[Em]castle is lit with \[Bm]candles and torches
@@ -16,9 +19,7 @@ The ^masters and the mistresses are ^walking to the hall
 They are ^smiling, laughing and ^showing that they are tall 
 ^They don't recog^nize that we're ^waiting the^re
 And just ^nobody can fore^see
-\endverse
-
-\beginverse*
+\vspace*{1em}
 This is the last night of the kings
 \endverse
 
@@ -28,6 +29,11 @@ To stand \[Am]up and to \[G]fight for an \[C]independent \[D]life
 \[Am]We are the \[Em]force, \[Am]we are the m\[Em]ight
 And \[Am]we will stand \[G]up for an \[C]independent \[Em]life
 \endchorus
+
+\beginverse*
+Raban\[Em]da  Raban\[Bm]dabaya \[G]Aaa\[D]ah
+Raban\[G]da  Raban\[C]dabaya \[D]Rabadanba\[Em]yah
+\endverse
 
 \beginverse
 The ^ball has begun and we're ^closing our trap
@@ -41,11 +47,11 @@ Still nobody can foresee
 Un^sheathing our swords and get ^ready to dance
 Our ^hearts are ^filled with the ^will to sur^vive
 In this \[Em]last night of their \[B7]life
-\endverse
-
-\beginverse*
+\vspace*{1em}
 It's a \[G]murderous, \[D]murderous ball \[Em]night
 \endverse
+
+\textnote{Repeat Chorus}
 
 \beginverse*
 \[Em]Rabanda  \[Bm]Rabanda
@@ -61,8 +67,16 @@ Raban\[A]da  Raban\[D]dabaya \[E]Rabadanba\[F#m]yah
 on our way
 \endverse
 
+\beginchorus
+\[Bm]We are the \[F#m]folk and \[Bm]we have the \[F#m]right
+To stand \[Bm]up and to \[A]fight for an \[D]independent \[E]life
+\[Bm]We are the \[F#m]force, \[Bm]we are the m\[F#m]ight
+And \[Bm]we will stand \[A]up for an \[D]independent \[F#m]life
+\endchorus
+
 \beginverse*
-Raban\[Em]da Raban\[Bm]dabaya \[G]Aaa\[D]ah
-Raban\[G]da Raban\[C]dabaya \[D]Rabadanba\[Em]yah
+\lrep Raban\[F#m]da Raban\[C#m]dabaya \[A]Aaa\[E]ah
+Raban\[A]da Raban\[D]dabaya \[E]Rabadanba\[F#m]yah \rrep \rep{2}
 \endverse
+
 \endsong
