--- a/songs/Guitar/minne.tex
+++ b/songs/Guitar/minne.tex
@@ -1,40 +1,46 @@
-\beginsong{Minne}[]
-\beginverse
-Du bist \[B]reich, du bist \[Gm]schön
+\beginsong{Minne}[
+	by={Subway to Sally}
+]
+
+\newchords{minne_1}
+\newchords{minne_2}
+
+\beginverse\memorize[minne_1]
+Du bist \[B&]reich, du bist \[Gm]schön
 Gestern \[Am]hab ich \[Dm]dich ge\[C]sehn 
-Und nun \[Dm]sehn' ich \[C]mich nach \[B]deinem \[C]süßen \[Dm]Munde
+Und nun \[Dm]sehn' ich \[C]mich nach \[B&]deinem \[C]süßen \[Dm]Munde
 \endverse
 
-\beginverse
-Augen \[B]sanft wie Monden\[Gm]schein 
-Rosen\[Am]blätter \[Dm]würd' ich \[C]streu'n 
-Verse \[Dm]schenkt ich \[C]dir aus \[B]tiefstem \[C]Herzens\[Dm]grunde 
+\beginverse\replay[minne_1]
+Augen ^sanft wie Monden^schein 
+Rosen^blätter ^würd' ich ^streu'n 
+Verse ^schenkt ich ^dir aus ^tiefstem ^Herzens^grunde 
 \endverse
 
-\beginverse
-Doch \[B]unerreichbar \[Dm]fern bist du auf \[C]ewig 
-Frommer \[B]Wunsch wird es \[C]sein  
+\beginverse\memorize[minne_2]
+Doch \[B&]unerreichbar \[Dm]fern bist du auf \[C]ewig 
+Frommer \[B&]Wunsch wird es \[C]sein  
 Der mir \[Dm]fuhr ins Herz \[C]hinein 
-Und seit\[Dm]dem ver\[C]fluch' ich \[B]jede \[C]volle \[Dm]Stunde 
+Und seit\[Dm]dem ver\[C]fluch' ich \[B&]jede \[C]volle \[Dm]Stunde 
 \endverse
 
-\beginverse
-Ich bin \[B]arm, du bist \[Gm]reich 
-Meine \[Am]Hände \[Dm]sind nicht \[C]weich
-Denn die \[Dm]Welt ist \[C]alles \[B]andere \[C]als ein \[Dm]Garten
+\beginverse\replay[minne_1]
+Ich bin ^arm, du bist ^reich 
+Meine ^Hände ^sind nicht ^weich
+Denn die ^Welt ist ^alles ^andere ^als ein ^Garten
 \endverse
 
-\beginverse
-Wo viel \[B]bunte Blumen \[Gm]blühn
-Rosen, \[Am]Veilchen \[Dm]und Jas\[C]min
-Und so \[Dm]muss ich \[C]bis zum \[B]jüngsten \[C]Tage \[Dm]warten 
+\beginverse\replay[minne_1]
+Wo viel ^bunte Blumen ^blüh'n
+Rosen, ^Veilchen ^und Jas^min
+Und so ^muss ich ^bis zum ^jüngsten ^Tage ^warten 
 \endverse
 
-\beginverse
-\[B]Tränen brennen \[Dm]heiß in meinen \[C]Augen
-Ach was \[B]ist mit mir ge\[C]schehn
-Seit mein \[Dm]Auge dich ge\[C]sehn
-Alle \[Dm]Zeit ver\[C]fluch ich \[B]jede \[C]volle \[Dm]Stunde
+\beginverse\replay[minne_2]
+^Tränen brennen ^heiß in meinen ^Augen
+Ach was ^ist mit mir ge^schehn
+Seit mein ^Auge dich ge^sehn
+Alle ^Zeit ver^fluch ich ^jede ^volle ^Stunde
 \endverse
 
 \endsong
