--- a/songs/Guitar/my_selene.tex
+++ b/songs/Guitar/my_selene.tex
@@ -1,4 +1,7 @@
-\beginsong{My Selene}[]
+\beginsong{My Selene}[
+	by={Sonata Arctica}
+]
+
 \beginverse*
 \lrep \[Bm] \[D] \[A] \[Bm] \[Em] \[F#m] \[G] \[A] \rrep \rep{2}
 \[Bm] \[G] \[Bm]
@@ -58,15 +61,15 @@ A\[Em]lone against the \[F#m]light \[G]Solitude \[A]am I \[Bm]
 \beginverse*
 In the \[G]end, I'm \[F#m]enslaved by my \[Bm]dream
 In the \[G]end, there's no \[F#m]soul who'd bleed for \[Bm]me
-~\\
-\[C] \[A] \[Dm] \[Dm]
-~\\
-\[F#m]Hidden from daylight I'm sealed in my cave
-Trapped in a dream that is slowly turning to a \[D]nightmare
-Where I'm all alone.
-~\\
-\[E]Venial is life when you're but a dream
-The book is still open, the pages as empty as \[F#m]me...
+%~\\
+%\[C] \[A] \[Dm] \[Dm]
+%~\\
+%\[F#m]Hidden from daylight I'm sealed in my cave
+%Trapped in a dream that is slowly turning to a \[D]nightmare
+%Where I'm all alone.
+%~\\
+%\[E]Venial is life when you're but a dream
+%The book is still open, the pages as empty as \[F#m]me...
 \endverse
 
 \beginverse*
@@ -84,7 +87,7 @@ In the \[Bm]break of new \[D]dawn My \[A]hope is for\[Bm]lorn
 \beginchorus
 This is \[Dm]my final \[F]call \[C]My even\[Dm]fall
 \[Gm]Drowning into \[Am]time \[A#]I become the \[C]night
-By the \[Cm]light of new \[F]day \[C]I'll fade a\[Dm]way
+By the \[Dm]light of new \[F]day \[C]I'll fade a\[Dm]way
 Re\[Gm]ality cuts \[Am]deep \[A#]Would you bleed with \[C]me
 My Se\[Dm]lene
 \[Dm] \[A#] \[Dm]
