--- a/songs/Guitar/p_stands_for_paddy.tex
+++ b/songs/Guitar/p_stands_for_paddy.tex
@@ -1,4 +1,7 @@
-\beginsong{P Stands for Paddy}[]
+\beginsong{P Stands for Paddy}[
+	by={Traditional}
+]
+
 \beginverse
 As \[Am]I walked out on a \[G]bright May morn'
 To \[F]take a pleasant \[C]walk
