--- a/songs/Guitar/paraonid.tex
+++ b/songs/Guitar/paraonid.tex
@@ -1,4 +1,7 @@
-\beginsong{Paranoid}[]
+\beginsong{Paranoid}[
+	by={Black Sabbath}
+]
+
 \beginverse\memorize
 \[Em]Finished with my woman 'cause she \[D]couldn't help me \[G]with \[D]my \[Em]mind
 \[Em]People think I'm insane because \[D]I am frowning \[G]all \[D]the \[Em]time
