--- a/songs/Guitar/roter_mond.tex
+++ b/songs/Guitar/roter_mond.tex
@@ -1,32 +1,43 @@
-\beginsong{Roter Mond}[]
+\beginsong{Roter Mond}[
+	by={Traditional}
+]
+
+\begin{infotext}
+Dieses Lied darf jeweils nur in der letzten Nacht einer Convention oder einer Reise gesungen werden!\\
+Die letzten Zeilen der letzten Strophe lauten ursprünglich:
+\begin{quote}
+Norden ist unser Glück und in uns bleibt nur die Erinnerung zurück\\
+Norden ist unser Glück und wir schwören uns ein neues zurück.
+\end{quote}
+In der vorliegenden Version wurde es auf die Waldcon umgedichtet, sollte aber für das jeweilige Event personalisiert werden. 
+\end{infotext}
+
 \beginverse\memorize
 \[Em]Roter Mond \[D]--- überm Silbersee, 
-\[Am]--- heiße Glut, \[D]---wärmt den kalten \[Em]Tee. 
-\lrep\[G]Kiefernwald \[D]in der Nacht 
-und \[Am]doch ist der neue \[Em]Tag nicht erwacht \rrep 
+\[Am]--- heiße Glut,
+\lrep\[D]---wärmt den kalten \[Em]Tee.\rrep 
+\lrep\[G]Kiefernwald \[D]in der Nacht und \[Am]doch ist der neue \[Em]Tag nicht erwacht \rrep 
 \endverse
 
 \beginverse
 ^Sterne stehn ^--- hell am Firmament. 
-^--- Solche Nacht ^--- findet nie ein End. 
-\lrep ^Dieses Land, ^wild und schön 
-und ^wir dürfen seine ^Herrlichkeit sehn \rrep
+^--- Solche Nacht 
+\lrep^--- findet nie ein End.\rrep
+\lrep ^Dieses Land, ^wild und schön und ^wir dürfen seine ^Herrlichkeit sehn \rrep
 \endverse
 
 \beginverse
 ^Grauer Fels, ^--- Moos und Heidekraut. 
-^--- Weit entfernt ^--- schon der Morgen graut. 
-\lrep ^Fahne weht, ^weiß auf grau, 
-das ^Gras schimmert unterm ^Morgentau \rrep
+^--- Weit entfernt 
+\lrep^--- schon der Morgen graut. \rrep 
+\lrep ^Fahne weht, ^weiß auf grau, das ^Gras schimmert unterm ^Morgentau \rrep
 \endverse
 
 \beginverse
 ^Con vorbei, ^---morgen geht es fort. 
-^--- Kommen wir, ^--- wieder an den Ort. 
-^Waldcon ist ^unser Glück 
-und ^in uns bleibt nur die ^Erinnerung zurück. 
-\vspace{1em}
-\[G]Waldcon ist \[D]unser Glück 
-und \[Am]wir schwören uns wir \[Em]kommen zurück.
+^--- Kommen wir, 
+\lrep^--- wieder an den ^Ort.\rrep
+^Waldcon ist ^unser Glück und ^in uns bleibt nur die ^Erinnerung zurück. 
+\[G]Waldcon ist \[D]unser Glück und \[Am]wir schwören uns wir \[Em]kommen zurück.
 \endverse
 \endsong
