--- a/songs/Guitar/scarborough_fair.tex
+++ b/songs/Guitar/scarborough_fair.tex
@@ -1,4 +1,6 @@
-\beginsong{Scarborough Fair}[]
+\beginsong{Scarborough Fair}[
+	by={Traditional}
+]
 
 \beginverse\memorize
 \[Am]Are you \[Em]going to \[G]Scarborough \[Am]Fair? 
@@ -10,7 +12,7 @@ for \[Am]once she \[D]was a \[G]true love of \[Am]mine.
 \beginverse
 ^Tell her to ^find me an ^acre of ^land
 ^--- Parsley ^Sage Rose^mary and ^Thyme
-^between salt^water and silver ^sand
+^between the ^sea and ^silver ^sand
 If ^she would ^be a ^true love of ^mine.
 \endverse
 
