--- a/songs/Guitar/star_of_the_county_down.tex
+++ b/songs/Guitar/star_of_the_county_down.tex
@@ -1,12 +1,15 @@
-\beginsong{Star of the County Down}[]
+\beginsong{Star of the County Down}[
+	by={Traditional}
+]
+
 \beginverse
 Near \[Em]Banbridge \[C]town, in the \[G]County \[D]Down,
 One \[Em]morning in \[D]July,
 Down a \[Em]boreen \[C]green came a \[G]sweet \[D]colleen
 And she \[Em]smiled as she passed me \[C]by;
-She \[Em]looked so \[C]sweet from her \[G]two white \[D]feet,
+She \[D]looked so \[Em]sweet \[G]from her \[D]two bare feet,
 To the \[Em]sheen of her nut-brown \[D]hair,
-Sure the \[Em]coaxing \[C]elf, I'd to \[G]shake\[D] myself,
+Such a \[Em]coaxing \[C]elf, I shure \[G]shook my\[D]self,
 To make \[Em]sure I was \[C]real\[D]ly \[Em]there.
 \endverse
 
@@ -15,7 +18,7 @@ As she ^onward ^sped sure I ^scratched my ^head
 And I ^said with a feeling ^quare
 And I ^said, says ^I to a ^passer-^by.
 Who's the ^maid with the nut-brown ^hair?
-Oh, he ^smiled at me, ^and with ^pride says he
+Oh, he ^smiled at ^me, ^and with ^pride says he
 That's the ^gem of Ireland's ^crown.
 She's young ^Rosie Mc^Cann, from the ^banks of the ^Bann
 She's the ^star of the ^Coun^ty ^Down.
@@ -33,7 +36,7 @@ She'd a ^soft brown ^eye and a ^look so ^sly,
 And a ^smile like the rose in ^June,
 And you ^hung on each ^note from her ^lily-white ^throat,
 As she ^lilted an Irish ^tune.
-At the ^pattern ^dance you were ^held in ^trance
+At the ^pattern ^dance ^you were ^held in trance
 As she ^tripped through a reel or ^jig,
 And when her ^eyes she'd ^roll, she'd ^coax upon my ^soul
 A ^spud from a ^hung^ry ^pig.
@@ -44,7 +47,7 @@ I've ^travelled a ^bit, but ^never was ^hit,
 Since my ^roving career be^gan;
 But ^fair and ^square I sur^rendered ^there
 To the ^charm of young Rose Mc^Cann.
-With a ^heart to ^let and no ^tenant ^yet
+With a ^heart to ^let ^and no ^tenant yet
 Did I ^meet within shawl or ^gown
 But ^in she ^went and I ^asked no ^rent
 From the ^star of the ^Coun^ty ^Down.
@@ -55,7 +58,7 @@ At the ^harvest ^fair I'll be ^surely ^there
 And I'll ^dress in my Sunday ^clothes,
 With my ^shoes shone ^bright and my ^hat up^right
 And a ^smile from my nut-brown ^Rose.
-No ^pipe I'll ^smoke, no ^horse I'll ^yoke
+No ^pipe I'll ^smoke, ^no ^horse I'll yoke
 Though my ^plough with rust turns ^brown
 Till a ^smiling ^bride by my ^own fire^side
 Sits the ^Star of the ^Coun^ty ^Down.
