--- a/songs/Guitar/step_it_out_mary.tex
+++ b/songs/Guitar/step_it_out_mary.tex
@@ -1,9 +1,11 @@
-\beginsong{Step it out Mary}
+\beginsong{Step it out Mary}[
+	by={Traditional}
+]
 
 \beginverse\memorize
 In the \[Dm]village of Kil\[C]dory, there's a \[Dm]maiden young and \[C]fair
 Her \[Dm]eyes they shone like \[C]diamonds, she had \[Dm]long and \[Am]golden \[Dm]hair
-Then a \[Dm]countryman came \[C]riding, up \[Dm]to her father's \[C]gates
+Then a \[Dm]countryman came \[C]riding, he cam \[Dm]to her father's \[C]gates
 \[Dm]Mounted on a \[C]milk-white stallion, he \[Dm]came at the \[Am]stroke of \[Dm]eight
 \endverse
 
@@ -16,21 +18,22 @@ Show your \[Dm]legs to the \[Am]country \[Dm]man
 
 \beginverse
 I have ^come to wed your ^daughter, Mary ^of the golden ^hair
-I have ^goods and I have ^money I have ^land bey^ond com^pare
+I have ^goods and I have ^money I have ^wealth bey^ond com^pare
 I will ^buy her silks and ^satin and a ^gold ring for her ^hand
 I will ^build for her a ^mansion, she'll have ^servants ^to ^command
 \endverse
 
 \beginverse
 Oh kind ^sir I love a ^soldier, I have ^pledged to him my ^hand
-I don't ^want your ^goods nor money, I don't ^want you ^house nor ^land
+I don't ^want your ^goods nor money, I don't ^want your ^house nor ^land
 Mary's ^father spoke up ^sharply, You will ^do as you are ^told
 You will ^marry him on ^Sunday and you'll ^wear his ^ring of ^gold
 \endverse
 
 \beginverse
 Near the ^village of Kil^dory there's a ^deep stream running ^by
-They found ^Mary there at ^midnight, she had ^drowned with her ^soldier ^boy
+They found ^Mary there at ^midnight, ---
+she had ^drowned with her ^soldier ^boy
 In the ^village there is ^music, you can ^hear her father ^say
 Step it out ^Mary, my fine ^daughter, Sunday ^is your ^wedding ^day.
 \endverse
