--- a/songs/Guitar/twa_corbiez.tex
+++ b/songs/Guitar/twa_corbiez.tex
@@ -1,6 +1,9 @@
-\beginsong{Twa Corbiez}[]
+\beginsong{Twa Corbiez}[
+	by={Traditional}
+]
+
 \beginverse 
-As I was \[Em]walking \[D]all a\[Em]lone
+\[Em]---As I was \[Em]walking \[D]all a\[Em]lone
 I heard two \[Em]ravens \[D]cry and \[Em]moan
 The one on\[G]to the other did \[D]say-o
 \[Em]Where shall we \[C]go and \[D]dine to\[Em]day-o?
@@ -8,7 +11,7 @@ The one on\[G]to the other did \[D]say-o
 \endverse
 
 \beginverse
-Out be^yond that ^old high ^dike
+^--- Out be^yond that ^old high ^dike
 I know there ^lies a ^murdered ^knight
 And no-one ^knows that he lies ^there-o
 But his ^hawk and his ^hound and his ^lady ^fair-o
