--- a/songs/Guitar/ye_jacobites.tex
+++ b/songs/Guitar/ye_jacobites.tex
@@ -1,4 +1,7 @@
-\beginsong{Ye Jacobites}[]
+\beginsong{Ye Jacobites}[
+	by={Traditional}
+]
+
 \beginverse\memorize
 Ye \[Em]Jacobites by name, lend an \[G]ear, lend an \[D]ear,
 Ye \[Em]Jacobites by name, \[D]lend an \[Em]ear,
