--- a/songs/Guitar/follow_me_up_to_carlow.tex
+++ b/songs/Guitar/follow_me_up_to_carlow.tex
@@ -1,5 +1,6 @@
 \beginsong{Follow Me Up to Carlow}[
-	by={Irish Traditional}]
+	by={Traditional}]
+	
 \beginverse\memorize
 \[Dm]Lift MacCahir \[C]Og your face
 You're \[Dm]brooding o'er you're \[C]old disgrace
@@ -34,7 +35,7 @@ Be^neath O'^Byrne's ^banners
 \endverse
 
 \beginverse
-^From Tassagart to ^Clonmore,
+^From Tassagart ^to Clonmore,
 There ^flows a stream of ^Saxon gore
 Oh, ^great is Rory ^Oge O'More,
 At ^sending ^loons to ^Hades.
