Added 3 songs and corrected some mistakes

--- a/songs/Guitar/amsterdam.tex
+++ b/songs/Guitar/amsterdam.tex
@@ -31,7 +31,7 @@ dam dam \[Em]dam dam dam dam \[Am]dam \rrep \rep{4}
 \endchorus
 
 \beginverse
-Komm wir tanzen durch die ^Grabstadt
+Komm wir tanzen durch die ^Grachtstadt
 Durch leblose ^Straßen
 Lass uns heut' ^Nacht noch was vom Leben er^warten
 Einfach mal ^weg vom Stress
