--- a/songs/Guitar/back_home_in_derry.tex
+++ b/songs/Guitar/back_home_in_derry.tex
@@ -7,7 +7,7 @@ In \[Am]eighteen-o-three we \[Em]sailed out to sea
 \[Am]For Australia bound, if we \[Em]didn't all drown
 The \[G]marks of our \[D]fetters we \[Am]carried
 
-\[Am]In our rusty iron chains we \[Em]cried for our weans
+In our \[Am]rusty iron chains we \[Em]cried for our weans
 Our \[Am]good women we left in \[Em]sorrow
 As the \[Am]main sails unfurled, our \[Em]curses we hurled
 On the \[G]English and \[D]thoughts of \[Am]tomorrow
@@ -26,8 +26,8 @@ How ^many will ^reach their re^ceiver
 \endverse
 
 \beginchorus
-\[G]Oh oh oh \[D]oh oh I \[Am]wish I was \[D]back home in \[Am]Derry
-\[G]Oh oh oh \[D]oh oh I \[Am]wish I was \[D]back home in \[Am]Derry
+\[G]Oh oh oh \[D]oh I \[Am]wish I was \[D]back home in \[Am]Derry
+\[G]Oh oh oh \[D]oh I \[Am]wish I was \[D]back home in \[Am]Derry
 \endchorus
 
 \beginverse
@@ -55,6 +55,6 @@ On the ^cold winds of ^night you will ^find me
 \endverse
 
 \beginverse*
-\[G]Oh oh oh \[D]oh oh I \[Am]wish I was \[D]back home in \[Am]Derry
+\[G]Oh oh oh \[D]oh I \[Am]wish I was \[D]back home in \[Am]Derry
 \endverse
 \endsong
