--- a/songs/Guitar/follow_me_up_to_carlow.tex
+++ b/songs/Guitar/follow_me_up_to_carlow.tex
@@ -30,7 +30,7 @@ See ^all the children ^of the Gael,
 Be^neath O'^Byrne's ^banners
 ^Rooster of the ^fighting stock,
 ^Would you let a ^Saxon cock
-^Crow out upon an ^Irish rock?
+Crow ^out upon an ^Irish rock?
 ^Fly up and ^teach him ^manners.
 \endverse
 
