--- a/songs/Guitar/last_night_of_the_kings.tex
+++ b/songs/Guitar/last_night_of_the_kings.tex
@@ -20,7 +20,7 @@ They are ^smiling, laughing and ^showing that they are tall
 ^They don't recog^nize that we're ^waiting the^re
 And just ^nobody can fore^see
 \vspace*{1em}
-This is the last night of the kings
+This is the \[G]last \[D]night \[C]of \[D]the \[Em]kings
 \endverse
 
 \beginchorus
@@ -39,7 +39,7 @@ Raban\[G]da  Raban\[C]dabaya \[D]Rabadanba\[Em]yah
 The ^ball has begun and we're ^closing our trap
 ^Inwardly we're gathering our^selves
 ^While the ^dance comes to a ^higher pa^ce
-Still nobody can foresee
+Still ^nobody can fore^see
 \endverse
 
 \beginverse
@@ -64,7 +64,7 @@ Raban\[A]da  Raban\[D]dabaya \[E]Rabadanba\[F#m]yah
 \[C#m]We are \[D]ready to \[E]live \[F#m]forevermore
 \[C#m]Our gods \[D]lead us \[E]through this \[F#m]fight
 \[C#m]On and \[D]on \[E]we are \[F#m]one and
-on our way
+\[E]on \[F#m]ou-\[G]r \[A]way
 \endverse
 
 \beginchorus
