--- a/songs/Guitar/my_selene.tex
+++ b/songs/Guitar/my_selene.tex
@@ -3,7 +3,7 @@
 ]
 
 \beginverse*
-\lrep \[Bm] \[D] \[A] \[Bm] \[Em] \[F#m] \[G] \[A] \rrep \rep{2}
+\lrep \[Bm] \[D] \[A] \[Bm] \[Em] \[F#m] \[G] \[A] \rrep
 \[Bm] \[G] \[Bm]
 \endverse
 
