--- a/songs/Guitar/no_cock_like_horse_cock.tex
+++ b/songs/Guitar/no_cock_like_horse_cock.tex
@@ -34,7 +34,7 @@ You need ^horse cock of ^course-cock
 
 \beginverse\replay[no_cock_like_horse_cock_verse]
 ^--- My shaft is quivering, my ^balls are turning blue and
-^--- I think of drinking in a ^foot or even two
+^--- I think of taking in a ^foot or even two
 ^--- My favorite stallion that I ^keep in my top drawer
 ^Slip it in and out be dripping goo
 \endverse
