--- a/songs/Guitar/p_stands_for_paddy.tex
+++ b/songs/Guitar/p_stands_for_paddy.tex
@@ -15,7 +15,7 @@ Be\[Am]fore I \[G]go a\[Am]way
 \endverse
 
 \beginverse
-^Come sit beside me, ^dear.
+^Come sit be^side me, dear.
 To^gether on the ^green.
 It's been a ^long three ^quarters of a ^year or more
 Since to^gether ^we have ^been.
@@ -42,12 +42,12 @@ For \[Am]Johnny's the \[G]fairest \[Am]man
 ^"I'll go and climb a ^tall fine tree
 Up ^to a wild bird's ^nest
 When ^I'll come ^down I'll ^care some more
-About the ^girl I love the ^best
+About the ^girl I ^love the ^best
 \vspace{1em}
 The ^girl I love the ^best", he said
 "The ^girl that I ^love best
-When ^I'll come down I'll ^care some more
-About the ^girl I love the ^best"
+When ^I'll ^come down I'll ^care some more
+About the ^girl I ^love the ^best"
 \endverse
 
 \beginverse
@@ -64,4 +64,19 @@ Your ^heart's no ^longer ^mine
 Your \[Am]heart's no \[G]longer \[Am]mine
 Your \[Am]heart's no \[G]longer \[Am]mine
 \endverse
+
+\beginchorus
+\[Am]"P" stands for \[G]Paddy, I suppose
+And \[F]"J" for my love \[C]John
+\[F]"W" \[C]stands for the \[G]false Willy-O
+And \[Am]Johnny's the \[C]fairest \[Am]man
+\vspace{1em}
+\[Am]Johnny's the fairest \[G]man, he said
+\[F]Johnny's the fairest \[C]man
+And \[F]I don't \[C]care what \[G]anybody says
+For \[Am]Johnny's the \[G]fairest \[Am]man
+\endchorus
+
+\textnote{Refrain mit steigender Geschwindigkeit wiederholen}
+
 \endsong
