--- a/songs/Guitar/amsterdam.tex
+++ b/songs/Guitar/amsterdam.tex
@@ -2,8 +2,10 @@
 	by={Sondaschule}
 ]
 
+\begin{otherlanguage}{ngerman}
+
 \beginverse*
-\lrep \[F] \[Am] \[Em] \[Am] \rrep \rep{2}
+\lrep {\nolyrics \[F] \[Am] \[Em] \[Am]} \rrep \rep{2}
 \endverse
 
 \beginverse\memorize
@@ -43,7 +45,7 @@ Was dich ver^gessen lässt
 ^--- Augen schwer wie Blei
 ^--- Wir fliegen los und denken ^nicht mehr an die Sterblich^keit
 Wir achten heute nicht auf ^Geld
-Es ^gibt zu wenig ^Liebe in der ^Welt
+Es ^gibt zu wenig ^Liebe auf der ^Welt
 \endverse
 
 \beginverse
@@ -52,5 +54,7 @@ Und wir gleiten wie die ^Geister durch die ^Nacht
 Durch den Nebel und die ^Lichter ^---
 Diese Stadt ist ^wie für uns ge^macht
 \endverse
+
+\end{otherlanguage}
 
 \endsong
