--- a/songs/Guitar/anotherdrinkingsong.tex
+++ b/songs/Guitar/anotherdrinkingsong.tex
@@ -6,7 +6,7 @@
 \newchords{anotherdrinkingsong_bridge}
 
 \beginverse*
-\[Am]---
+{\nolyrics \[Am]}
 \endverse
 
 \beginverse\memorize[anotherdrinkingsong_verse]
@@ -35,7 +35,7 @@ They \[Am]settle for a\[G]notherdrinking\[Am]song.
 Where the ^busy man finds recreation the ^idle man finds ^business,
 The ^melancholy man finds sanctua^ry;
 The ^stranger may have welcome and ^still within these ^selfsame walls,
-The ^citizen may ^find some courte^sy*.
+The ^citizen may ^find some courte^sy.
 
 \vspace*{1em}
 
