--- a/songs/Guitar/blau_wie_das_meer.tex
+++ b/songs/Guitar/blau_wie_das_meer.tex
@@ -52,7 +52,7 @@ In ^meinem Bett liegt nackt die Frau ^vom \[G]Ka\[G]pi\[G]tän
 \beginchorus
 Sie war \[C]blau wie das Meer \[F]voll wie unser Laderaum
 \[Am]breit so wie die Ärsche von den \[G]Weibern auf Tortuga
-Ich bin \[C]blau wie das Meer ge\[F]laden wie ein Bordgeschütz
+Sie war \[C]blau wie das Meer ge\[F]laden wie ein Bordgeschütz
 und \[Am]dichter als der \[G]Nebel vor Kap \[C]Ho-\[G]o-\[C]orn
 \endchorus
 
@@ -69,7 +69,7 @@ also \[F]gießt den drei Ma\[C]trosen noch einen \[G]ein
 
 \beginverse*
 \[C] \[F] \[Am] \[G]
-\[C] \[F] \[Am] \[G] \[C] \[G]
+\[C] \[F] \[Am] \[G] \[C] \[G] \[C]
 \endverse
 
 \endsong
