--- a/songs/Guitar/havamal.tex
+++ b/songs/Guitar/havamal.tex
@@ -1,4 +1,7 @@
-\beginsong{Havamal}[]
+\beginsong{Havamal}[
+    by={Falkenbach}
+]
+
 \beginverse\memorize                
 \[Am]First I know, un\[F]known to rulers,
 \[G]Or any human \[E]mind;
@@ -10,11 +13,11 @@ In \[Dm]hours of \[E]despair.
 I ^know a third, in the ^thick of battle,
 ^If my need be ^great,
 It will ^blunt the edges of ^swords and axes,
-Their ^weapons makes no ^wounds.
+Their ^weapons make no ^wounds.
 \endverse
 
 \beginverse*
-\[Am]\[Am]\[Am]\[G]
+\lrep Whooh-oh-\[Am]o Whooh-oh-\[Am]o Whooh-oh-\[G]o Whooh-oh-\[Am]o \rrep
 \endverse
 
 \beginverse
@@ -25,15 +28,13 @@ And ^puts the sea to ^sleep.
 \endverse
 
 \beginverse*
-\[Am]\[Am]\[Am]\[G]
+\lrep Whooh-oh-\[Am]o Whooh-oh-\[Am]o Whooh-oh-\[G]o Whooh-oh-\[Am]o \rrep
 \endverse
 
 \beginchorus
 The \[Am]Wise One has spoken the \[G]words in the \[F]hall,
 \[Am]Joy to him who \[F]un\[G]der\[Am]stood.
 \vspace{1em}
-\[Am]\[Am]\[Am]\[G]
-
 \[Am]--- I grew and \[G]I throve \[F]well
 \[Am]Word from word gave \[F]words \[E]to \[Am]me.
 \[Am]--- I grew and \[G]I throve \[F]well
@@ -48,35 +49,29 @@ Un^scathed wherever they ^are.
 \endverse
 
 \beginverse*
-\[Am]\[Am]\[Am]\[G]
+\lrep Whooh-oh-\[Am]o Whooh-oh-\[Am]o Whooh-oh-\[G]o Whooh-oh-\[Am]o \rrep
 \endverse
 
 \beginverse
 I ^know another, ^only few know,
 The ^names of the fallen ^ones.
 A^bout the high ones, ^elves and gods,
-^I can name them all.
+^I can name them ^all.
 \endverse
 
 \beginverse*
-\[Am]\[Am]\[Am]\[G]
+\lrep Whooh-oh-\[Am]o Whooh-oh-\[Am]o Whooh-oh-\[G]o Whooh-oh-\[Am]o \rrep
 \endverse
 
 \beginchorus
 The \[Am]Wise One has spoken the \[G]words in the \[F]hall,
 \[Am]Joy to him who \[F]un\[G]der\[Am]stood.
 \vspace{1em}
-\[Am]\[Am]\[Am]\[G]
-
 \[Am]--- I grew and \[G]I throve \[F]well
 \[Am]Word from word gave \[F]words \[E]to \[Am]me.
 \[Am]--- I grew and \[G]I throve \[F]well
 \[Am]Deed from deed gave \[F]deeds \[E]to \[Am]me.
 \endchorus
-
-\beginverse*
-\[Am]\[Am]\[Am]\[G]
-\endverse
 
 \beginverse
 ^The Wise One has spoken the ^words in the hall,
