--- a/songs/Guitar/lady_in_black.tex
+++ b/songs/Guitar/lady_in_black.tex
@@ -1,5 +1,8 @@
 \beginsong{Lady in Black}[
-	by={Uriah Heep}]
+	by={Uriah Heep}
+]
+
+\transpose{-7}
 	
 \beginverse\memorize
 She \[Em]came to me one morning, one \[Em]lonely Sunday morning
