--- a/songs/Guitar/maenner_mit_baerten.tex
+++ b/songs/Guitar/maenner_mit_baerten.tex
@@ -3,7 +3,8 @@
 ]
 
 \begin{infotext}
-Wenn eine Melodiebegleitung existiert, kann das Intro mit gespielt werden.
+Wenn eine Melodiebegleitung existiert, kann das Intro mit gespielt werden.\\
+Angenehmer zu singen, wenn einen Ganzton tiefer gestimmt.
 \end{infotext}
 
 \newchords{maenner_mit_baerten_verse}
