--- a/songs/Guitar/my_selene.tex
+++ b/songs/Guitar/my_selene.tex
@@ -2,6 +2,11 @@
 	by={Sonata Arctica}
 ]
 
+\begin{infotext}
+Gitarre einen Ganzton tiefer gestimmt.\\
+G und A können als Barré Chords gespielt werden.
+\end{infotext}
+
 \beginverse*
 \lrep \[Bm] \[D] \[A] \[Bm] \[Em] \[F#m] \[G] \[A] \rrep
 \[Bm] \[G] \[Bm]
