--- a/songs/Guitar/the_cauldron_born.tex
+++ b/songs/Guitar/the_cauldron_born.tex
@@ -2,6 +2,10 @@
 	by={Damh the Bard}
 ]
 
+\begin{infotext}
+Gitarre einen Ganzton tiefer stimmen.
+\end{infotext}
+
 \newchords{cauldron_verse}
 \newchords{cauldron_bridge}
 
