--- a/songs/Guitar/the_islander.tex
+++ b/songs/Guitar/the_islander.tex
@@ -7,13 +7,13 @@ Chordprogression in der Strophe ist:\\
 \minfrets=5
 \gtab{Bm}{X(24432)}
 \gtab{Bsus2}{X(24422)}
-\gtab{Bx}{X(25432)}
+\gtab{Gmaj7/B}{X(25432)}
 \end{infotext}
 
 \beginverse\memorize
-An \[Bm]old man by the \[Bsus2]seashore \[Bx]at the end of \[Em]day
+An \[Bm]old man by the \[Bsus2]seashore \[Gmaj7/B]at the end of \[Em]day
 \[A]Gazes the ho\[G]rizon with \[A]seawinds in his \[Bm]face
-\[Bm]Tempest-tossed \[Bsus2]island \[Bx]seasons all the \[Em]same
+\[Bm]Tempest-tossed \[Bsus2]island \[Gmaj7/B]seasons all the \[Em]same
 \[A]Anchorage un\[G]painted and a \[A]ship without a \[Bm]name
 \endverse
 
