--- a/songs/Guitar/unter_den_toren.tex
+++ b/songs/Guitar/unter_den_toren.tex
@@ -2,6 +2,10 @@
 	by={Traditional}
 ]
 
+\begin{infotext}
+Angenehmer zu singen, wenn die Gitarre einen Ganzton tiefer gestimmt ist.
+\end{infotext}
+
 \beginverse*
 \[Dm] \[C] \[F] \[A]
 \endverse
