--- a/songs/Guitar/vergoettert_und_verdammt.tex
+++ b/songs/Guitar/vergoettert_und_verdammt.tex
@@ -2,6 +2,10 @@
 	by={Sören Vogelsang}
 ]
 
+\begin{infotext}
+Gitarre einen Ganzton tiefer stimmen.
+\end{infotext}
+
 \beginchorus
 Ich bin \[E]vergöttert, bin \[C]verdammt
 und aus dem \[D]Himmelreich ver\[E]bannt
@@ -52,7 +56,7 @@ Ich spiel im ^Frieden und im ^Krieg
 die ganze ^Welt ist mir Musik ^---
 \endverse
 
-2 $\times$ Chorus
+\textnote{2 $\times$ Chorus}
 
 
 \endsong
