--- a/songs/Guitar/wellerman.tex
+++ b/songs/Guitar/wellerman.tex
@@ -1,5 +1,6 @@
 \beginsong{Wellerman}[
-	by={New Zealand Traditional}]
+	by={New Zealand Traditional}
+]
 	
 \beginverse\memorize
 There \[Am]once was a ship that \[Am]put to sea
