--- a/songs/Guitar/ye_jacobites.tex
+++ b/songs/Guitar/ye_jacobites.tex
@@ -31,10 +31,13 @@ Or ^haunt a Parent's ^life, with ^bloody ^war?
 
 \beginverse
 ^Let your schemes alone, in the ^state, in the ^state,
-^Let your schemes alone in the ^state.
+^Let your schemes alone ^in the ^state.
 ^Let your schemes alone,
 A^dore the rising sun,
 And ^leave a man undone, to his ^fate, to his ^fate.
 And ^leave a man ^undone, ^to his ^fate.
 \endverse
+
+\textnote{Erste Strophe wiederholen}
+
 \endsong
